--- a/css/style.css
+++ b/css/style.css
@@ -814,6 +814,11 @@ fieldset {
 
   background-color: #e4e4de;
   border-radius: 5px;
+
+  display: flex;
+  align-items: center;
+
+  padding: 0 15px;
 }
 
 .ad-form__element--submit {
